# MSP430-GCC-CMake-Template

./: .clang-format  CMakeLists.txt  Makefile  README.md  msp430-elf-gcc.cmake
src/: main.cpp
